Fix overlapping of title in restaurant.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -348,9 +348,9 @@ body .inside{
     #restaurants-list li {
       max-width: 100%;
     }
-    #breadcrumb {
+/*    #breadcrumb {
       margin-top: -30px;
-    }
+    }*/
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
